--- a/exercise/question/first/index.html
+++ b/exercise/question/first/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<script type="text/javascript" src="..lib/d3.v4.min.js"></script>
-<script type="text/javascript" src="./javascript/lodash.min.js"></script>
+<script type="text/javascript" src="../../lib/d3.v4.min.js"></script>
+<script type="text/javascript" src="../../lib/lodash.min.js"></script>
 <script type="text/javascript" src="./javascript/data.js"></script>
 <div class="bar-chart">
 </div>
