table created according to requirement

--- a/exercise/question/third/index1.html
+++ b/exercise/question/third/index1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Chart With Random Number</title>
-    <link rel="stylesheet" type="text/css" href="table.css">
+    <link rel="stylesheet" type="text/css" href="table1.css">
 </head>
 <body>
 <script type="text/javascript" src="./javascript/d3.v4.min.js"></script>
