exercie 6 is completed with refactoring in exercise 3 and 4

--- a/exercise/question/second/index.html
+++ b/exercise/question/second/index.html
@@ -19,6 +19,6 @@
 </div>
 <div class="legend">Subjects: </div>
 <script type="text/javascript" src="../../lib/d3.v4.min.js"></script>
-<script type="text/javascript" src="javascript/student.js"></script>
+<script type="text/javascript" src="ja/studentData.js"></script>
 </body>
 </html>
