--- a/exercise/question/fourth/shapes/index.html
+++ b/exercise/question/fourth/shapes/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./shape.css">
+    <link rel="stylesheet" type="text/css" href="shape.css">
     <title>Shapes</title>
 </head>
 <body>
-<center> <h1>Shapes</h1>
-    <div> </div>
+<center><h1>Shapes</h1>
+    <div></div>
 </center>
 
-<script type="text/javascript" src="../../lib/d3.v4.min.js"></script>
-<script type="text/javascript" src="./shape.js"></script>
+<script type="text/javascript" src="../../../lib/d3.v4.min.js"></script>
+<script type="text/javascript" src="shape.js"></script>
 </body>
 </html>
