refactoring :- 1. change the size of the svg. 2.increased the size of Donut radius. 3. Using class instread of id.

--- a/exercise/exercise14/index.html
+++ b/exercise/exercise14/index.html
@@ -5,7 +5,7 @@
     <title>Pie Chart</title>
 </head>
 <body>
-<div id="chart"></div>
+<div class="container"></div>
 <script src="../../exercise/lib/d3.v4.min.js"></script>
 <script src=data.js></script>
 <script>
