--- a/exercise/exercise15/index.html
+++ b/exercise/exercise15/index.html
@@ -5,7 +5,7 @@
     <title>Pie Chart</title>
 </head>
 <body>
-<div id="chart"></div>
+<div class="container"></div>
 <script src="../../exercise/lib/d3.v4.min.js"></script>
 <script src=data.js></script>
 <script>
